Created a branch for testing out transition text panels. It seems work well.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 <body>
 <div class="wrapper">
   <div id="container" class="slide_1">
-    <!-- <div id="left_holder" onClick="slide(-1)"><span class="left">Prev</span></div>
-    <div id="right_holder" onClick="slide(1)"><span class="right">Next</span></div> -->
+    <div id="slide_1__text" class="show">
+      <h2>Slide 1 is nice.</h2>
+      <p>oeuruoiwejijwerilj fdksjjfklsadjf</p>
+    </div>
+    <div id="slide_2__text" class="" style="margin-top: -420px;">
+      <h2>Slide 2 is bitter.</h2>
+      <p>oeuruoiwejijwerilj fdksjjfklsadjf</p>
+    </div>
+    <div id="slide_3__text" class="" style="margin-top: -420px;">
+      <h2>Slide 3 is bad.</h2>
+      <p>oeuruoiwejijwerilj fdksjjfklsadjf</p>
+    </div>
     <div id="nav" class="navigation">
       <a id="first" class="active" href="#">Slide 1</a>
       <a id="second" href="#">Slide 2</a>
