--- a/index.html
+++ b/index.html
@@ -11,25 +11,18 @@
 </head>
 <body>
 <div class="wrapper">
-  <div id="container" class="slide_1">
-    <div id="slide_1__text" class="show">
-      <h2>Slide 1 is nice.</h2>
-      <p>oeuruoiwejijwerilj fdksjjfklsadjf</p>
-    </div>
-    <div id="slide_2__text" class="" style="margin-top: -420px;">
-      <h2>Slide 2 is bitter.</h2>
-      <p>oeuruoiwejijwerilj fdksjjfklsadjf</p>
-    </div>
-    <div id="slide_3__text" class="" style="margin-top: -420px;">
-      <h2>Slide 3 is bad.</h2>
-      <p>oeuruoiwejijwerilj fdksjjfklsadjf</p>
-    </div>
-    <div id="nav" class="navigation">
-      <a id="first" class="active" href="#">Slide 1</a>
-      <a id="second" href="#">Slide 2</a>
-      <a id="third" href="#">Slide 3</a>
-    </div>
+  <div id="carousel">
+    <div id="slide_1" class="display" style="background: url('images/carousel1.jpg'); background-size: cover; display: none;"></div>
+    <div id="slide_2" class="" style="background: url('images/carousel2.jpg'); background-size: cover; display: none;"></div>
+    <div id="slide_3" class="" style="background: url('images/carousel3.jpg'); background-size: cover; display: none;"></div>
   </div>
+
+  <div id="nav" class="navigation">
+    <a id="first" class="active" href="#">Slide 1</a>
+    <a id="second" href="#">Slide 2</a>
+    <a id="third" href="#">Slide 3</a>
+  </div>
+
 
   <script src="js/functions.js"></script>
 </div>
