--- a/slider_2.0.html
+++ b/slider_2.0.html
@@ -18,13 +18,13 @@
     height: 450px;
   }
   #slide_1 {
-    background: url('../images/carousel1.jpg') no-repeat center / cover;
+    background: url('images/carousel1.jpg') no-repeat center / cover;
   }
   #slide_2 {
-    background: url('../images/carousel2.jpg') no-repeat center / cover;
+    background: url('images/carousel2.jpg') no-repeat center / cover;
   }
   #slide_3 {
-    background: url('../images/carousel3.jpg') no-repeat center / cover;
+    background: url('images/carousel3.jpg') no-repeat center / cover;
   }
   .show {
     display: block !important;
